--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "budgetly-backend",
+  "version": "1.0.0",
+  "description": "Backend API for Budgetly app",
+  "main": "server.js",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
