--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.13.5",
+    "framer-motion": "^12.34.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-countup": "^6.5.3",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
